fixing bullet css on mobile

--- a/app/assets/stylesheets/profile-edit.css
+++ b/app/assets/stylesheets/profile-edit.css
@@ -96,6 +96,9 @@
     max-height: 3rem;
     margin-bottom: -1px!important;
     margin-top: -2px!important;
+    margin-right: 0px;
+    padding-right: 0px;
+    border-right: 0px;
 }
 
 .submit-button-container {
